--- a/app/src/main/res/layout/second_fragment.xml
+++ b/app/src/main/res/layout/second_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/second_fragment"
     xmlns:FrameLayot="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -10,9 +10,9 @@
         android:gravity="center"
         android:id="@+id/bigNumberView"
         android:layout_width="wrap_content"
-        android:minWidth="70dp"
-        android:minHeight="70dp"
-        android:textSize="70sp"
+        android:minWidth="190dp"
+        android:minHeight="190dp"
+        android:textSize="190sp"
         android:textColor="@color/colorPrimary"
         android:layout_height="wrap_content" />
 
