--- a/app/src/main/res/layout/second_fragment.xml
+++ b/app/src/main/res/layout/second_fragment.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/second_fragment"
-    xmlns:FrameLayot="http://schemas.android.com/apk/res-auto">
+    android:id="@+id/second_fragment">
 
     <TextView
         android:layout_above="@id/backButton"
