--- a/app/src/main/res/layout/second_fragment.xml
+++ b/app/src/main/res/layout/second_fragment.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/second_fragment">
 
     <TextView
-        android:layout_above="@id/backButton"
+        android:layout_below="@id/backButton"
         android:gravity="center"
         android:id="@+id/bigNumberView"
         android:layout_width="wrap_content"
@@ -21,4 +21,4 @@
         android:layout_height="wrap_content"
         android:text="@string/back"/>
 
-</FrameLayout>
+</RelativeLayout>
